Stage_3 : SQL Features  … Added Treenode features with messanger QML Model			: Basic 				- FileView,ListView,TreeView C++ Model 			: Basic Document Model 			: Basic 				- .txt, TODO .svg,.glsl SQL Model 			: Basic 				- TreeModel,TreeMessanger WebSocket Model 			: Basic JSON/REST/HTTP Model			: TODO HTML Model			: Basic Local,TODO Cloud SVG Model			: Basic Shader Model			: Basic OpenGL Model			: Basic 				- Workflow Stages/Modes: ADDED PlayMode,EditMode,SampleMode 				- Edges:BASIC Reserched Linear Intrepolation with Parametric Equations and 				- Surface:BASIC Reserched Distance Function and SubDivision 				- Animation:BASIC Research Speed&Intrepolation(BeZier Curves), Weights/Center of Gravity(IK Bones, Cages and Points)

--- a/qml.qrc
+++ b/qml.qrc
@@ -113,5 +113,10 @@
         <file>media/gifs/gif_03_flyDragon.gif</file>
         <file>media/textures/tex04.png</file>
         <file>shaders/fs_0_bSpline.fsh</file>
+        <file>tree/default.txt</file>
+        <file>qml/pages/svgmodel/DialogShader.qml</file>
+        <file>qml/pages/svgmodel/PboxTree.qml</file>
+        <file>qml/pages/svgmodel/PboxFile.qml</file>
+        <file>qml/pages/svgmodel/PboxList.qml</file>
     </qresource>
 </RCC>
